[package]
name = "eve"
version = "0.4.0"
authors = ["Chris Granger <ibdknox@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dev-dependencies]
csv = "0.14"

[dependencies]
rand = "0.3.23"
fnv = "1.0.7"
time = "0.1.45"
libc = "*"
lazy_static = "1.4"
ws = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
walkdir = "2.3.2"
num = "0.4.0"
bincode = "1.3"
clap = "2.34"
term-painter = "0.2.4"
unicode-segmentation = "1.10.1"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
natord = "1.0.9"
notify = "4.0.17"
